--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -18,14 +18,6 @@
             android:paddingRight="20dp"
             tools:context=".MainActivity" >
 
-            <com.google.ads.AdView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                ads:adSize="BANNER"
-                ads:adUnitId="ca-app-pub-5638464060914850/1640977723"
-                ads:loadAdOnCreate="true"
-                ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID" />
-
             <!-- Início do texto do letreiro -->
 
             <TextView
@@ -87,7 +79,7 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="vertical" >
 
                 <CheckBox
                     android:id="@+id/fonte_letreiro_led"
@@ -112,6 +104,7 @@
                 android:id="@+id/button_salvar"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+               	android:paddingTop="10dp"
                 android:layout_marginLeft="80dp"
                 android:layout_marginRight="80dp"
                 android:onClick="salvarConfiguracao"
