Correção na hora e o focus no edittext do texto

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#3b5998"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+     android:focusable="true"
+    android:focusableInTouchMode="true" >
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -107,10 +109,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center" >
+                android:gravity="center"
+                android:orientation="horizontal" >
 
                 <!-- Início do botão limpar -->
+
                 <Button
                     android:id="@+id/button_clear"
                     android:layout_width="wrap_content"
@@ -120,9 +123,10 @@
                     android:paddingTop="10dp"
                     android:text="@string/button_clear" />
                 <!-- Fim do botão limpar -->
-                
-                
+
+
                 <!-- Início do botão salvar -->
+
                 <Button
                     android:id="@+id/button_save"
                     android:layout_width="wrap_content"
