--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#3b5998"
@@ -146,13 +146,12 @@
         android:gravity="bottom"
         android:orientation="vertical" >
 
-        <com.google.ads.AdView
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-5638464060914850/1640977723"
-            ads:loadAdOnCreate="true"
-            ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID" />
+            ads:adUnitId="ca-app-pub-5638464060914850/1640977723" />
     </LinearLayout>
 
 </LinearLayout>
