--- a/res/layout/activity_sobre.xml
+++ b/res/layout/activity_sobre.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_gravity="center"
     android:background="#000"
     android:orientation="vertical"
     tools:context=".SobreActivity" >
@@ -10,7 +11,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingTop="50dp"
+        android:paddingBottom="50dp" >
 
         <TextView
             android:layout_width="fill_parent"
