Versão 1.0.7 - remoção do admob

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -35,8 +35,7 @@
                 android:layout_height="wrap_content"
                 android:background="#FFF"
                 android:hint="@string/hint_texto"
-                android:singleLine="true"
-                android:textSize="25dp" />
+                android:singleLine="true" />
             <!-- Fim do texto do letreiro -->
 
 
